# era5epw

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
era5epw/: __init__.py  ads.py  cds.py  logcfg.py  main.py  utils.py  visualize.py
tests/: discover.py  test_ads.py  test_cds.py  test_epw_gen.py  test_logging.py  test_netcdf.py  test_time_zone.py  test_utils.py  test_visualize.py
tests/resources/: cams_2024.nc  era5_2024_01.nc  era5_2024_02.nc
